# gRPC_PolyVision

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker-compose.yml  runClient.sh  runServer.sh
.devcontainer/: devcontainer.json
docs/html/: ClassMapper_8h.html  ClassMapper_8h__incl.map  ClassMapper_8h__incl.md5  ClassMapper_8h_source.html  Config_8h.html  Config_8h__dep__incl.map  Config_8h__dep__incl.md5  Config_8h__incl.map  Config_8h__incl.md5  Config_8h_source.html  Detection_8h.html  Detection_8h__incl.map  Detection_8h__incl.md5  Detection_8h_source.html  Drawer_8h.html  Drawer_8h__incl.map  Drawer_8h__incl.md5  Drawer_8h_source.html  FileReader_8h.html  FileReader_8h__incl.map  FileReader_8h__incl.md5  FileReader_8h_source.html  GrpcStreamClient_8h.html  GrpcStreamClient_8h__incl.map  GrpcStreamClient_8h__incl.md5  GrpcStreamClient_8h_source.html  IClassMapper_8h.html  IClassMapper_8h__dep__incl.map  IClassMapper_8h__dep__incl.md5  IClassMapper_8h__incl.map  IClassMapper_8h__incl.md5  IClassMapper_8h_source.html  IDetector_8h.html  IDetector_8h__dep__incl.map  IDetector_8h__dep__incl.md5  IDetector_8h__incl.map  IDetector_8h__incl.md5  IDetector_8h_source.html  IDisplay_8h.html  IDisplay_8h__dep__incl.map  (+404 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+11 more)
docs/latex/: ClassMapper_8h.tex  ClassMapper_8h__incl.md5  Config_8h.tex  Config_8h__dep__incl.md5  Config_8h__incl.md5  Detection_8h.tex  Detection_8h__incl.md5  Drawer_8h.tex  Drawer_8h__incl.md5  FileReader_8h.tex  FileReader_8h__incl.md5  GrpcStreamClient_8h.tex  GrpcStreamClient_8h__incl.md5  IClassMapper_8h.tex  IClassMapper_8h__dep__incl.md5  IClassMapper_8h__incl.md5  IDetector_8h.tex  IDetector_8h__dep__incl.md5  IDetector_8h__incl.md5  IDisplay_8h.tex  IDisplay_8h__dep__incl.md5  IDisplay_8h__incl.md5  IDrawer_8h.tex  IDrawer_8h__dep__incl.md5  IDrawer_8h__incl.md5  IFileReader_8h.tex  IFileReader_8h__dep__incl.md5  IFileReader_8h__incl.md5  IGrpcStreamClient_8h.tex  IGrpcStreamClient_8h__dep__incl.md5  IGrpcStreamClient_8h__incl.md5  IImageEncoder_8h.tex  IImageEncoder_8h__dep__incl.md5  IImageEncoder_8h__incl.md5  IImageProcessor_8h.tex  IImageProcessor_8h__dep__incl.md5  IImageProcessor_8h__incl.md5  IJsonParser_8h.tex  IJsonParser_8h__dep__incl.md5  IJsonParser_8h__incl.md5  (+159 more)
images/: 1.json  2.json
proto/: ImageAnalysis.proto  image_analisis.proto
src/client/: CMakeLists.txt  main.cc  main.cpp
src/client/include/impl/: CmdOptions.h  GrpcStreamClient.h  OpenCVDisplay.h  OpencvCodec.h  OpencvDisplay.h  cmd_options.h  grpc_stream_client.h  opencv_display.h
src/client/include/interfaces/: IDisplay.h  IFileReader.h  IGrpcStreamClient.h  IImageEncoder.h  IJsonParser.h  IPolygonParser.h  i_display.h  i_file_reader.h  i_grpc_stream_client.h  i_json_parser.h  i_polygon_parser.h
src/client/include/polygons/: FileReader.h  JsonParser.h  PolygonParser.h  Polygons.h  file_reader.h  json_parser.h  polygon_parser.h  polygons.h
src/client/include/processing/: ImageProcessingClient.h  image_processing_client.h
src/client/src/impl/: CmdOptions.cpp  GrpcStreamClient.cpp  OpenCVDisplay.cpp  OpencvCodec.cpp  OpencvDisplay.cpp  cmd_options.cc  grpc_stream_client.cc  opencv_display.cc
src/client/src/polygons/: FileReader.cpp  JsonParser.cpp  PolygonParser.cpp  Polygons.cpp  file_reader.cc  json_parser.cc  polygon_parser.cc  polygons.cc
src/client/src/processing/: ImageProcessingClient.cpp  image_processing_client.cc
src/common/: CMakeLists.txt
src/common/include/impl/: OpenCVEncoder.h  opencv_encoder.h
src/common/include/interfaces/: IImageEncoder.h  i_image_encoder.h
src/common/src/impl/: OpenCVEncoder.cpp  OpencvCodec.cpp  opencv_encoder.cc
src/server/: CMakeLists.txt  main.cc  main.cpp
src/server/include/impl/: ClassMapper.h  CmdOptions.h  Config.h  Detection.h  Drawer.h  ImageProcessor.h  ObjectFilterByPolygon.h  ObjectsDetecting.h  PolygonProcessor.h  YoloDetector.h  class_mapper.h  cmd_options.h  config.h  detection.h  detection_output_parser.h  drawer.h  geometric_filter_by_polygon.h  image_preprocessor.h  inference_backend.h  object_filter_by_polygon.h  objects_detecting.h  polygon.h  polygon_clipper_sutherland_hodgman.h  polygon_processor.h  yolo_detector.h
src/server/include/interfaces/: IClassMapper.h  IDetector.h  IDrawer.h  IImageProcessor.h  IObjectFilter.h  IPolygonProcessor.h  i_class_mapper.h  i_detection_output_parser.h  i_detector.h  i_drawer.h  i_image_preprocessor.h  i_image_processor.h  i_inference_backend.h  i_object_filter.h  i_polygon_clipper.h  i_polygon_processor.h
src/server/include/processing/: ImageProcessingServer.h  image_processing_server.h
src/server/src/impl/: ClassMapper.cpp  CmdOptions.cpp  Drawer.cpp  ImageProcessor.cpp  ObjectFilterByPolygon.cpp  ObjectsDetecting.cpp  PolygonProcessor.cpp  YoloDetector.cpp  class_mapper.cc  cmd_options.cc  detection_output_parser.cc  drawer.cc  geometric_filter_by_polygon.cc  image_preprocessor.cc  inference_backend.cc  object_filter_by_polygon.cc  objects_detecting.cc  polygon_clipper_sutherland_hodgman.cc  polygon_processor.cc  yolo_detector.cc
src/server/src/processing/: ImageProcessingServer.cpp  image_processing_server.cc
tests/: CMakeLists.txt
tests/client/: FileReaderTest.cpp  JsonParserTest.cpp  PolygonParserTest.cpp  PolygonsTest.cpp  file_reader_test.cc  json_parser_test.cc  polygon_parser_test.cc  polygons_test.cc
tests/common/: OpenCVEncoderTest.cpp  opencv_encoder_test.cc
tests/server/: ClassMapperTest.cpp  PolygonProcessorTest.cpp  geometric_filter_by_polygon_test.cc  polygon_clipper_sutherland_hodgman_test.cc  polygon_processor_test.cc
